--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>configserver</module>
         <module>account</module>
         <module>menu</module>
+        <module>order</module>
     </modules>
 
     <!-- 引入 Spring Boot 的依赖 -->
