--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>account</module>
         <module>menu</module>
         <module>order</module>
+        <module>user</module>
     </modules>
 
     <!-- 引入 Spring Boot 的依赖 -->
